class07-refactored js code, created constructor for creation of shop objects and using tables to display data

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 
     <!-- Link CSS  -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Cookie Stand</title>
@@ -20,14 +21,19 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="#">Locations</a></li>
+                <li><a href="#">FAQ</a></li>
                 <li><a href="sales.html">Sales</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <img src="img/salmon.png">
+        <section class="hero-container">
+            <img class="hero-img" src="img/salmon.png">
+            <img class="hero-img-bg" src="img/forest-bg.jpg">
+        </section>
         <h1>Salmon Cookies</h1>
         <p>Welcome to Salmon Cookies, the best cookies for humans AND salmons!</p>
     </main>
