--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 
     <!-- link CSS  -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Sales</title>
@@ -20,20 +21,29 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Go to index</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Locations</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="sales.html">Sales</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <h1>Sales Data</h1>
-        <button id="seattle-store-btn">Seattle</button>
+        <!-- <button id="seattle-store-btn">Seattle</button>
         <button id="tokyo-store-btn">Tokyo</button>
         <button id="dubai-store-btn">Dubai</button>
         <button id="paris-store-btn">Paris</button>
-        <button id="lima-store-btn">Lima</button>
-        <section id="display-sales">
+        <button id="lima-store-btn">Lima</button> -->
+        <table>
+            <tbody id="display-sales">
+                <tr id="table-header">
 
+                </tr>
 
-        </section>
+            </tbody>
+        </table>
     </main>
     <!-- link JS  -->
     <script src="js/app.js"></script>
