class07-last minute changes to styles

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </header>
     <main>
         <section class="hero-container">
-            <img class="hero-img" src="img/salmon.png">
-            <img class="hero-img-bg" src="img/forest-bg.jpg">
+            <img class="hero-img" alt="image of a salmon" src="img/salmon.png">
+            <img class="hero-img-bg" alt="image of a green forest in the shape of an oval" src="img/forest-bg.jpg">
         </section>
         <h1>Salmon Cookies</h1>
         <p>Welcome to Salmon Cookies, the best cookies for humans AND salmons!</p>
