class08-css styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/004ffe82fe.js" crossorigin="anonymous"></script>
+
     <!-- Link CSS  -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -37,6 +40,15 @@
         <h1>Salmon Cookies</h1>
         <p>Welcome to Salmon Cookies, the best cookies for humans AND salmons!</p>
     </main>
+    <footer>
+        <section class="footer-container">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-solid fa-envelope"></i>
+        </section>
+        <p>©Created by James Ian Solima</p>
+    </footer>
     <!-- Link JS  -->
     <script src="js/app.js"></script>
 </body>
