class08-style edit

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </section>
         <h1>Salmon Cookies</h1>
         <p>Welcome to Salmon Cookies, the best cookies for humans AND salmons!</p>
+        <br>
+        <p>Hours: 6am - 7pm</p>
+        <p>Location: 1234 Salmon Dr. Seattle, WA 98101</p>
     </main>
     <footer>
         <section class="footer-container">
