--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
         </section>
         <h1>Salmon Cookies</h1>
         <p>Welcome to Salmon Cookies, the best cookies for humans AND salmons!</p>
+        <br>
+        <p>Hours: 6am - 7pm</p>
+        <p>Location: 1234 Salmon Dr. Seattle, WA 98101</p>
     </main>
     <footer>
+        <hr>
         <section class="footer-container">
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-facebook-f"></i>
