class09-refactor code

--- a/sales.html
+++ b/sales.html
@@ -31,18 +31,20 @@
     </header>
     <main>
         <h1>Sales Data</h1>
-        <!-- <button id="seattle-store-btn">Seattle</button>
-        <button id="tokyo-store-btn">Tokyo</button>
-        <button id="dubai-store-btn">Dubai</button>
-        <button id="paris-store-btn">Paris</button>
-        <button id="lima-store-btn">Lima</button> -->
-        <table>
-            <tbody id="display-sales">
-                <tr id="table-header">
+        <form action="" method="get">
+            
 
-                </tr>
+        </form>
+        <table>
+            <thead id="sales-table-header">
+
+            </thead>
+            <tbody id="sales-table-body">
 
             </tbody>
+            <tfoot id="sales-table-footer">
+
+            </tfoot>
         </table>
     </main>
     <!-- link JS  -->
