class10-added new hours funcitonality ft.Reedooo

--- a/sales.html
+++ b/sales.html
@@ -56,6 +56,14 @@
                     <input type="number" name="avgCookiesInput" id="avgCookies" placeholder="enter average cookies sold"
                         step="any">
                 </section>
+                <section>
+                    <label for="openHours">Open Hours (24 hour format)</label>
+                    <input type="text" name="openHours" id="openHours">
+                </section>
+                <section>
+                    <label for="closedHours">Close Hours (24 hour format)</label>
+                    <input type="text" name="closedHours" id="closedHours">
+                </section>
                 <button type="submit">Generate Sales Data</button>
             </fieldset>
         </form>
