lab10-final cookie stand

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Roboto+Slab:wght@300;400&family=Roboto:wght@100;300;500&family=Yellowtail&display=swap"
+        rel="stylesheet">
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/004ffe82fe.js" crossorigin="anonymous"></script>
@@ -40,8 +42,11 @@
         <h1>Salmon Cookies</h1>
         <p>Welcome to Salmon Cookies, the best cookies for humans AND salmons!</p>
         <br>
-        <p>Hours: 6am - 7pm</p>
-        <p>Location: 1234 Salmon Dr. Seattle, WA 98101</p>
+        <p class="info-text">Hours: 6am - 7pm</p>
+        <p class="info-text">Location: 1234 Salmon Dr. Seattle, WA 98101</p>
+        <p class="info-text">Phone: (206)123-4567</p>
+        <p class="info-text">Email: help@salmoncookies.com</p>
+
     </main>
     <footer>
         <hr>
